# NanoTekSpace

./: CMakeLists.txt  Makefile  test
.github/workflows/: gitworkflow.yml
include/: Factory.hpp  HelloWorld.hpp  MAnageExecutionCommands.hpp  Map.hpp  Parsing.hpp  Pin.hpp  Shell.hpp  Utils.hpp  parsing.hpp  str_to_word_array.hpp
include/Abstract/: AComponent.hpp
include/Components/: 4001Component.hpp  4008Component.hpp  4011Component.hpp  4030Component.hpp  4069Component.hpp  4071Component.hpp  4081Component.hpp  AndComponent.hpp  ClockComponent.hpp  FalseComponent.hpp  InputComponent.hpp  LoggerComponent.hpp  NotComponent.hpp  OrComponent.hpp  OutputComponent.hpp  TrueComponent.hpp  XorComponent.hpp
include/Interface/: IComponent.hpp
src/: Factory.cpp  HelloWorld.cpp  ManageExecutionCommands.cpp  Map.cpp  Parsing.cpp  Pin.cpp  Shell.cpp  main.cpp  parsing.cpp  str_to_word_array.cpp
src/Abstract/: AComponent.cpp
src/Components/: 4001Component.cpp  4008Component.cpp  4011Component.cpp  4030Component.cpp  4069Component.cpp  4071Component.cpp  4081Component.cpp  AndComponent.cpp  ClockComponent.cpp  FalseComponent.cpp  InputComponent.cpp  LoggerComponent.cpp  NotComponent.cpp  OrComponent.cpp  OutputComponent.cpp  TrueComponent.cpp  XorComponent.cpp
src/Utils/: GetFileContent.cpp  RemoveComment.cpp  StrToWordArray.cpp  WriteInFile.cpp
tests/: Test_4001Component.cpp  Test_4008Component.cpp  Test_4011Component.cpp  Test_4030Component.cpp  Test_4069Component.cpp  Test_4071Component.cpp  Test_4081Component.cpp  Test_AndComponent.cpp  Test_HelloWorld.cpp  Test_NotComponent.cpp  Test_OrComponent.cpp  Test_Utils.cpp  Test_XorComponent.cpp
tests/Utils/: TestUtils.cpp  TestUtils.hpp
tests/txt_for_Tests_Utils/: removeComment_commonCase.txt  strToWordArray.txt
